--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,28 @@
             J’ai soif de savoir et je sais qu'il y a toujours quelque 
             chose à apprendre. Je suis très <span> motivée </span>, <span> dynamique </span> et <span> positive </span>.
         </p>
+        <div class="button">
+            <p> Consulter mon profil</p>
+        </div>
+
+        <div class="slideshow">
+            <ul>
+            <li><img src="img/street-food.png" alt></li>
+            <li><img src="img/flexin.png" alt></li>
+            <li><img src="img/SOCODA.png" alt></li>
+            </ul>
+            <div class="barre_progression"></div>
+        </div>
+
+        <div class="text__Slide Slide">
+            <p>Ici vous pouvez voir les projets que j’ai réalisé avec
+                 l’école, et également mes projets personnelles.
+                <span>Chaque projets a été réalisé avec passion !</span></p>
+                <div class="Slide__button">
+            <p> Consulter les projets</p>
+        </div>
+        </div>
+        
     </body>
 
 </html>
